fixed: footer buttons overlapping cart

--- a/assets/styles/index_animations.css
+++ b/assets/styles/index_animations.css
@@ -110,16 +110,18 @@
 /* ===================== PRODUCTOS ===================== */
 
 #products {
-  animation: fadeDown 0.6s forwards 2.1s;
+  animation: fadeDown 0.6s forwards 0.5s;
 }
 
 .product {
-  animation: fadeDown 0.6s forwards 2.3s;
+  animation: fadeDown 0.6s forwards 0.5s;
 }
 
 .filter {
-  animation: fadeDown 0.6s forwards 2.5s;
+  animation: fadeDown 0.6s forwards 0.5s;
 }
+
+/* ===================== FOOTER ===================== */
 
 .footer__info {
   animation: fade 0.6s forwards 2.7s;
