--- a/assets/styles/index_responsive.css
+++ b/assets/styles/index_responsive.css
@@ -234,11 +234,6 @@
     font-size: 1.1rem;
   }
 
-  /* Producto */
-  .product:hover {
-    transform: scale(1);
-  }
-
   /* --- CARRITO --- */
   .cart__field {
     padding-top: 120px;
