--- a/assets/styles/index_style.css
+++ b/assets/styles/index_style.css
@@ -75,7 +75,7 @@ body {
 
 .sticky {
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
 }
@@ -521,7 +521,6 @@ main {
   transition: all 0.2s;
 }
 .product:hover {
-  transform: scale(1.1);
   box-shadow: 0 0 20px 0 var(--primary);
 }
 
@@ -877,6 +876,7 @@ main {
 .success-div {
   display: flex;
   position: relative;
+  z-index: 2;
 }
 
 .success-msg {
@@ -925,6 +925,7 @@ main {
 /* Carrito */
 
 .cart__field {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
